--- a/index.html
+++ b/index.html
@@ -2,62 +2,148 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Seoul Subway Sandwich Map</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Seoul Subway 매장 지도</title>
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
   <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.css" />
   <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.Default.css" />
   <style>
-    html, body { height: 100%; margin: 0; }
-    #map { height: 100vh; width: 100%; }
+    html, body { height:100%; margin:0; background:#f6f7f9;
+      font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Noto Sans KR", Arial, sans-serif; }
+    #map { height:100vh; width:100%; }
+    .topbar {
+      position: fixed; top: 12px; left: 50%; transform: translateX(-50%); z-index: 1000;
+      background: rgba(255,255,255,0.95); border:1px solid #e5e7eb; border-radius:14px;
+      padding:8px 14px; box-shadow:0 4px 16px rgba(0,0,0,0.08);
+    }
+    .legend {
+      position: fixed; right: 12px; bottom: 12px; z-index: 1000;
+      background: rgba(255,255,255,0.94); border:1px solid #e5e7eb; border-radius:12px;
+      padding:10px 12px; font-size:12px;
+    }
+    .logo-swatch { width:18px; height:18px; border-radius:5px; background:#1da64a; display:inline-block; margin-right:6px; }
+    .btn {
+      position: fixed; top: 12px; right: 12px; z-index: 1000;
+      border: 1px solid #e5e7eb; background:#fff; padding:8px 12px; border-radius:10px; cursor:pointer;
+    }
   </style>
 </head>
 <body>
+  <div class="topbar"><b>Seoul Subway (샌드위치) 매장 지도</b></div>
+  <button id="fitAll" class="btn">모두 보기</button>
   <div id="map"></div>
+  <div class="legend"><span class="logo-swatch"></span>Subway 매장 · Light gray basemap</div>
 
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
   <script src="https://unpkg.com/leaflet.markercluster@1.5.3/dist/leaflet.markercluster.js"></script>
   <script>
-  const STORES = [
-    {
-      "name": "써브웨이 서울고속터미널점",
-      "address": { "road": "서울특별시 서초구 신반포로 194 강남고속버스터미널 지하1층 10호" },
-      "geo": { "lat": 37.505681, "lng": 127.005846 }
-    },
-    {
-      "name": "써브웨이 성대점",
-      "address": { "road": "서울특별시 종로구 창경궁로 234 동화빌딩" },
-      "geo": { "lat": 37.585, "lng": 126.999 } // Ví dụ, bạn thay bằng tọa độ thật
-    }
-    // ... thêm các điểm khác
-  ];
+    // ---- Cài đặt bản đồ (nền xám sáng) ----
+    const MAP_CENTER = [37.5665, 126.9780]; // Seoul City Hall
+    const map = L.map('map').setView(MAP_CENTER, 12);
 
-  const map = L.map('map').setView([37.5665, 126.9780], 12);
+    L.tileLayer('https://{s}.basemaps.cartocdn.com/light_all/{z}/{x}/{y}{r}.png', {
+      maxZoom: 19,
+      attribution: '&copy; OpenStreetMap & CARTO'
+    }).addTo(map);
 
-  L.tileLayer('https://{s}.basemaps.cartocdn.com/light_all/{z}/{x}/{y}{r}.png', {
-    maxZoom: 19,
-    attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
-  }).addTo(map);
-
-  // Marker cluster group
-  const markers = L.markerClusterGroup();
-
-  const icon = L.icon({
-    iconUrl: "https://upload.wikimedia.org/wikipedia/commons/5/5d/Subway_Sandwich_logo_2020.svg",
-    iconSize: [30, 30]
-  });
-
-  STORES.forEach(s => {
-    if (s.geo) {
-      const m = L.marker([s.geo.lat, s.geo.lng], { icon }).bindPopup(`
-        <b>${s.name}</b><br/>
-        ${s.address.road}
+    // ---- Icon marker (SVG xanh kiểu Subway) ----
+    const svgIcon = (size=34) => {
+      const svg = encodeURIComponent(`
+        <svg xmlns='http://www.w3.org/2000/svg' width='${size}' height='${size}' viewBox='0 0 48 48'>
+          <circle cx='24' cy='24' r='22' fill='#1da64a' stroke='white' stroke-width='3'/>
+          <path d='M16 26h10l-4 6h6l8-10-8-10h-6l4 6H16z' fill='white'/>
+        </svg>
       `);
-      markers.addLayer(m);
-    }
-  });
+      return L.icon({
+        iconUrl: 'data:image/svg+xml;charset=UTF-8,' + svg,
+        iconSize: [size, size],
+        iconAnchor: [size/2, size - 4],
+        popupAnchor: [0, -size/2]
+      });
+    };
+    const markerIcon = svgIcon(36);
 
-  map.addLayer(markers);
+    // ---- Cụm marker (cluster) ----
+    const clusters = L.markerClusterGroup({
+      chunkedLoading: true,
+      spiderfyOnMaxZoom: true,
+      showCoverageOnHover: false,
+      maxClusterRadius: 55
+    }).addTo(map);
+
+    // ---- Helper hiển thị địa chỉ ----
+    const fmtAddr = (a) => {
+      if (!a) return '';
+      const parts = [];
+      if (a.road) parts.push(a.road);
+      if (a.jibeon) parts.push(`(${a.jibeon})`);
+      return parts.join(' ');
+    };
+
+    // ---- Geocoding nhẹ (Nominatim) cho entry thiếu tọa độ ----
+    async function geocode(address) {
+      if (!address) return null;
+      const url = new URL('https://nominatim.openstreetmap.org/search');
+      url.searchParams.set('q', address);
+      url.searchParams.set('format', 'json');
+      url.searchParams.set('addressdetails', '0');
+      url.searchParams.set('limit', '1');
+      url.searchParams.set('countrycodes', 'kr');
+      try {
+        const res = await fetch(url, { headers: { 'Accept-Language': 'ko', 'User-Agent': 'SeoulSubwayMap/1.0' } });
+        if (!res.ok) throw new Error('HTTP ' + res.status);
+        const data = await res.json();
+        if (data && data.length > 0) return { lat: parseFloat(data[0].lat), lng: parseFloat(data[0].lon) };
+      } catch (e) {
+        console.warn('Geocode failed', address, e);
+      }
+      return null;
+    }
+
+    // ---- Load dữ liệu từ JSON cùng thư mục ----
+    async function loadAndRender() {
+      const resp = await fetch('subway_seoul.json'); // đặt cùng folder với file HTML
+      const stores = await resp.json();
+      const bounds = [];
+
+      for (const s of stores) {
+        let latlng = (s.geo && typeof s.geo.lat === 'number' && typeof s.geo.lng === 'number') ? s.geo : null;
+
+        // Nếu thiếu tọa độ thì thử geocode theo "road" (+ jibeon)
+        if (!latlng) {
+          const q = fmtAddr(s.address) || (s.district ? `서울특별시 ${s.district}` : '');
+          latlng = await geocode(q);
+          // giữ lịch sự: 1 giây/req để tránh spam API miễn phí
+          await new Promise(r => setTimeout(r, 900));
+        }
+
+        if (!latlng) continue;
+
+        const popup = `
+          <div style="font-size:14px;">
+            <div style="font-weight:700;margin-bottom:4px;">${s.name}</div>
+            <div>${fmtAddr(s.address)}</div>
+            ${s.phone ? `<div style="margin-top:4px;">☎ ${s.phone}</div>` : ''}
+            ${s.district ? `<div style="margin-top:4px;color:#64748b;">${s.district}</div>` : ''}
+          </div>
+        `;
+
+        const m = L.marker([latlng.lat, latlng.lng], { icon: markerIcon }).bindPopup(popup);
+        clusters.addLayer(m);
+        bounds.push([latlng.lat, latlng.lng]);
+      }
+
+      if (bounds.length) map.fitBounds(bounds, { padding: [40, 40] });
+    }
+
+    loadAndRender();
+
+    // ---- Nút Fit All ----
+    document.getElementById('fitAll').addEventListener('click', () => {
+      const groupBounds = clusters.getBounds();
+      if (groupBounds.isValid()) map.fitBounds(groupBounds, { padding: [40, 40] });
+      else map.setView(MAP_CENTER, 12);
+    });
   </script>
 </body>
 </html>
